home-automation/omnivoice/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omnivoice-route
  namespace: omnivoice
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: crobceratops-gateway
      namespace: gateways
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - omnivoice.crobceratops.ryanbeales.com
    - omnivoice.crobasaurusrex.ryanbeales.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: ''	
          kind: Service
          name: omnivoice
          port: 8880
          weight: 1
      timeouts:
        request: 300s
